// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export var foo: string = "hello";

=====================================output=====================================
export var foo: string = "hello";

================================================================================
`;

exports[`B.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import {foo} from './A.js';

=====================================output=====================================
import { foo } from "./A.js";

================================================================================
`;

exports[`C.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import {foo} from './A.js';

=====================================output=====================================
import { foo } from "./A.js";

================================================================================
`;
